# ci-cd-test-repo

./: Jenkinsfile  pyproject.toml  sonar-project.properties  sonar-project.properties 
src/: double.py  test_double.py
