[tool.poetry]
name = "ci-cd-test-repo"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <ikuhara@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
